--- a/frontend/src/pages/Customer/CustomerDashboard.module.css
+++ b/frontend/src/pages/Customer/CustomerDashboard.module.css
@@ -75,3 +75,28 @@
 .fixedToggleButton:hover {
   background-color: #218838; /* 滑鼠懸停時，背景顏色加深，提供視覺回饋 */
 }
+
+/* 漢堡按鈕 */
+.hamburgerButton {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+  z-index: 1000;
+}
+
+.hamburgerButton span {
+  display: block;
+  width: 30px;
+  height: 3px;
+  background-color: #333333;
+  margin: 5px 0;
+  transition: background-color 0.3s ease;
+}
+
+.hamburgerButton:hover span {
+  background-color: #A7A2A9;
+}
